# gtree

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.template  pyproject.toml
docs/: docker.md  environment.md  migrations.md  mypy-usage.md  ruff-usage.md
scripts/: init-db.sh  init-db.sql  migrate.sh  setup-env.sh
src/gtree/: main.py
src/gtree/api/v1/: dependencies.py  error_handling.py  routers.py
src/gtree/api/v1/controllers/: api_controller.py  auth_controller.py  user_controller.py
src/gtree/api/v1/controllers/trees/: __init__.py  blood_relations_controller.py  individuals_controller.py  marriages_controller.py  tree_controller.py  trees_controller.py
src/gtree/api/v1/schemas/: base.py  user.py
src/gtree/api/v1/schemas/trees/: blood_relation.py  individual.py  marriage.py  tree.py
src/gtree/application/: exceptions.py
src/gtree/application/authorization/: tree_access.py
src/gtree/application/exceptions/: auth.py  base.py  individual.py  user.py
src/gtree/application/services/: user_service.py
src/gtree/application/services/trees/: blood_relation_service.py  individual_service.py  tree_service.py
src/gtree/core/: logging.py
src/gtree/core/config/: app.py  cors.py  database.py  jwt.py  settings.py
src/gtree/domain/: exceptions.py
src/gtree/domain/entities/: base.py  user.py
src/gtree/domain/entities/_value_objects/: gender.py  tree_access_level.py
src/gtree/domain/entities/trees/: individual.py  tree.py  tree_access.py
src/gtree/domain/entities/value_objects/: gender.py
src/gtree/domain/funcs/: time.py
src/gtree/infrastructure/db/: exceptions.py  session.py
src/gtree/infrastructure/db/mappers/: individual.py  tree.py  tree_access.py  user.py
src/gtree/infrastructure/db/migrations/: env.py  script.py.mako
src/gtree/infrastructure/db/migrations/versions/: 9e3cfc0159f5_add_user.py  a664ed9969df_add_tree_and_components.py
src/gtree/infrastructure/db/models/: __init__.py  base.py  user.py
src/gtree/infrastructure/db/models/trees/: __init__.py  blood_relation.py  individual.py  marriage.py  tree.py  tree_access.py
src/gtree/infrastructure/db/repositories/: base.py  user.py
src/gtree/infrastructure/db/repositories/trees/: individual.py  tree.py  tree_access.py
src/gtree/infrastructure/utils/: auth.py  exceptions.py
