[project]
name = "gtree"
version = "0.1.0"
description = "A modern FastAPI application with clean architecture"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.128,<0.129",
    "uvicorn[standard]>=0.40,<0.41",

    "sqlalchemy[postgresql-asyncpg] (>=2.0.46,<3.0.0)",
    "asyncpg>=0.31,<0.32",
    "alembic>=1.18,<2.0",
    "psycopg2-binary (>=2.9.11,<3.0.0)",

    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings>=2.12,<3.0",

    "structlog>=25.5,<26.0",
    "watchfiles>=1.1,<2.0",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "cryptography (>=46.0.3,<47.0.0)",
]

[project.scripts]
gtree = "gtree.main:app"


# ------------------------- build -------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtree"]


# ------------------------- ruff -------------------------

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "B", "C4", "UP", "SIM",
    "I",
    "N",
    "D",
    "S",
    "A",
    "COM",
    "C90",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "YTT",
    "ARG",
    "TCH",
    "TID",
    "Q",
]

ignore = [
    "B008",
    "B027",
    "FBT003",
    "S105", "S106", "S107",
    "C901",
    "PLR2004",
    "T201",
    "TID252",
    "E501",
    "COM812",

    # docstrings
    "D100", "D101", "D102", "D103",
    "D104", "D105", "D106", "D107",
    "D415",

    "N818",
    "INP001",

    # Generic
    "UP046",
    "A002",
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["gtree"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "PLR2004",
    "TID252",
    "D",
]

"examples/**/*.py" = [
    "PLR2004",
    "T201",
    "D",
]


# ------------------------- mypy -------------------------

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
no_implicit_optional = true

warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true

ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
check_untyped_defs = false


# ------------------------- pyright (LSP) -------------------------

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
#reportMissingImports = false
#reportMissingTypeStubs = false
reportArgumentType = false


# ------------------------- pytest -------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]

markers = [
    "unit",
    "integration",
    "slow",
]


# ------------------------- dev deps -------------------------

[dependency-groups]
dev = [
    "ruff>=0.13",
    "mypy>=1.8",
    "pyright>=1.1",

    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
